--- a/sass/secundarios/_index.scss
+++ b/sass/secundarios/_index.scss
@@ -1,20 +1,23 @@
-
 /*estilos del index*/
 .mainindex {
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+
     .mainindex__sec1 {
         position: absolute;
         top: 5.65rem;
         left: 0;
         z-index: 1;
         width: 100%;
-        .mainindex__sec1__video {
+
+        img {
             width: 100%;
+            height: 15rem;
         }
     }
+
     .mainindex__sec2 {
         position: relative;
         display: flex;
@@ -24,12 +27,14 @@
         width: 100%;
         z-index: 2;
         height: 10rem;
-        margin-bottom:$medida-2;
-        img{
-            margin-top: 5rem;
+        margin-bottom: $medida-2;
+
+        img {
+            margin-top: 6rem;
             z-index: 2;
-            @include sizes(40%,7rem);
+            @include sizes(40%, 7rem);
         }
+
         p {
             background: -webkit-linear-gradient(nth($colores, 3), nth($colores, 8));
             background-clip: text;
@@ -37,10 +42,11 @@
             -webkit-text-fill-color: transparent;
             font-size: $medida-1;
             text-align: center;
-            @include sizes(100%,5rem);
+            @include sizes(100%, 5rem);
         }
     }
 }
+
 .mainindex__sec3 {
     h1 {
         @include h(3rem);
@@ -55,23 +61,28 @@
         align-items: center;
         flex-flow: column wrap;
         margin-bottom: $medida-1 + $medida-025;
+
         .mainindex__sec3__contenedorpro__hijo {
             margin-top: $medida-2;
             width: 70%;
+
             p {
                 .s1 {
                     text-decoration: line-through;
                     opacity: 50%;
                 }
             }
+
             span {
                 padding: $medida-05;
                 line-height: $medida-2;
                 font-size: $medida-1 + $medida-05;
             }
+
             @extend %pro;
-            img{
-                @include sizes(70%,12rem);
+
+            img {
+                @include sizes(70%, 12rem);
             }
         }
     }
@@ -80,48 +91,59 @@
         @extend %boton
     }
 }
+
 hr {
     margin: 0;
-    @include  tb(6rem,6rem);
-    width:100%;
+    @include tb(6rem, 6rem);
+    width: 100%;
 }
-.mainindex__sec4m{
+
+.mainindex__sec4m {
+    width: 100%;
+
     .mainindex__sec4m__boton {
         @extend %boton;
     }
-    h3{
+
+    h3 {
         @include h($medida-2 + $medida-05);
         margin-top: $medida-2;
     }
-    h2{
+
+    h2 {
         margin-bottom: $medida-2 + $medida-1;
         @include h($medida-2 * 1.75);
     }
-    img{
-        height: 16rem;
+
+    img {
+        @include sizes(100%, 16rem)
     }
 }
-.mainindex__sec4{
+
+.mainindex__sec4 {
     @extend %none;
+
     .mainindex__sec4__boton {
         @extend %boton;
     }
 }
+
 /* estilos de la mediaquerie */
 @media screen and (min-width:576px) {
+
     /*estilos de index*/
-    .contenedorindex__logo {
-        display: none;
-    }
 
     .mainindex {
         .mainindex__sec1 {
-            position: absolute;
             top: 6rem;
+
+            img {
+                height: 35rem;
+            }
         }
 
         .mainindex__sec2 {
-            height: 40rem;
+            height: 32rem;
 
             p {
                 font-size: $medida-1 + 0.25rem;
@@ -130,13 +152,12 @@ hr {
             img {
                 @include sizes(auto, auto);
             }
-
-            margin-bottom: 6rem;
         }
     }
 
     .mainindex__sec3 {
         width: 100%;
+
         h1 {
             margin: 3rem;
             font-size: 4.5rem;
@@ -147,13 +168,47 @@ hr {
             display: flex;
             justify-content: center;
             flex-flow: row nowrap;
+
             .mainindex__sec3__contenedorpro__hijo {
                 width: 25%;
-                img{
-                    @include sizes(66%,10rem)
+
+                img {
+                    @include sizes(66%, 7rem)
                 }
             }
         }
+    }
+
+
+
+    hr {
+        @include tb(8rem, 8rem);
+    }
+
+    .mainindex__sec4m {
+        img {
+            margin-top: $medida-1;
+            @include sizes(100%, 24rem)
+        }
+    }
+
+}
+
+@media screen and (min-width:1000px) {
+    .mainindex {
+        .mainindex__sec1 {
+            img {
+                height: 45rem;
+            }
+        }
+
+        .mainindex__sec2 {
+            height: 45rem;
+        }
+    }
+
+    .mainindex__sec4m {
+        @extend %noned;
     }
 
     .mainindex__sec4 {
@@ -237,10 +292,16 @@ hr {
             }
         }
     }
-    hr {
-        @include  tb(8rem, 8rem);
-    }
-    .mainindex__sec4m {
-        @extend %noned;
+
+    .mainindex__sec3 {
+        .mainindex__sec3__contenedorpro {
+            .mainindex__sec3__contenedorpro__hijo {
+                width: 25%;
+
+                img {
+                    @include sizes(66%, 10rem)
+                }
+            }
+        }
     }
 }
