--- a/sass/secundarios/_index.scss
+++ b/sass/secundarios/_index.scss
@@ -128,7 +128,7 @@ hr {
     }
 }
 
-/* estilos de la mediaquerie */
+/* estilos de la mediaquerie tablet*/
 @media screen and (min-width:576px) {
 
     /*estilos de index*/
@@ -193,7 +193,7 @@ hr {
     }
 
 }
-
+/* estilos de la mediaquerie desktop*/
 @media screen and (min-width:1000px) {
     .mainindex {
         .mainindex__sec1 {
