--- a/sass/secundarios/_proy.scss
+++ b/sass/secundarios/_proy.scss
@@ -2,7 +2,7 @@
 .mainproy {
     h1 {
         @include h($medida-3);
-        @include tb($medida-3,$medida-3);
+        @include tb($medida-3, $medida-3);
     }
 
     .mainproy__sec {
@@ -11,6 +11,8 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        align-items: center;
+
         img {
             padding: $medida-2;
             @include sizes(100%, 14rem);
@@ -26,41 +28,65 @@
             padding: $medida-2;
             @include p(center);
         }
-        .mainproy__sec__span{
+
+        .mainproy__sec__span {
             display: none;
         }
+
         border: $medida-05 inset nth($colores, 7);
         border-radius: $medida-1 0rem $medida-1 0rem;
     }
 
 }
-/* estilos de la mediaquerie */
+
+/* estilos de la mediaquerie tablet*/
 @media screen and (min-width:576px) {
     .mainproy {
-      h1{
-        font-size: $medida-3 + $medida-05;
-      }  
+        .mainproy__sec {
+            @include tb($medida-3, $medida-3);
+            p{
+                padding: $medida-1 + $medida-05 $medida-3;
+            }
+            .mainproy__sec__span {
+                display: inline;
+            }
+            img {
+                @include sizes(30rem, 20rem);
+            }
+        }
+    }
+}
+/* estilos de la mediaquerie desktop*/
+@media screen and (min-width:1000px) {
+    .mainproy {
+        h1 {
+            font-size: $medida-3 + $medida-05;
+        }
+
         .mainproy__sec {
             display: grid;
             grid-template-areas:
-            "img h2"
-            "img p";
-            h2{
+                "img h2"
+                "img p";
+
+            h2 {
                 grid-area: h2;
                 font-size: $medida-2 +$medida-05;
                 margin-top: $medida-1 + $medida-05;
             }
-            p{
+
+            p {
                 grid-area: p;
                 text-align: center;
                 margin-bottom: $medida-1;
             }
-            .mainproy__sec__span{
+
+            .mainproy__sec__span {
                 display: inline;
             }
+
             img {
                 grid-area: img;
-                @include sizes(30rem, 20rem);
             }
         }
     }
