--- a/sass/utillities/_extend.scss
+++ b/sass/utillities/_extend.scss
@@ -28,7 +28,7 @@
 
     h2 {
         @include tb($medida-05, $medida-05);
-        @extend %prold;
+        @extend %prol;
         font-size: $medida-3 - $medida-05;
     }
 
@@ -36,7 +36,7 @@
         font-weight: bold;
         font-size: $medida-1 + $medida-05;
         padding-bottom: $medida-1;
-        @extend %prold;
+        @extend %prol;
     }
 
     &:hover {
@@ -61,15 +61,25 @@
 }
 
 @media screen and (min-width:576px) {
-    %borded {
-        border: 0.3rem solid nth($colores, 2);
-        border-radius: $medida-025;
-    }
+    %prot {
+        margin: $medida-1;
+        h2{
+            font-size: $medida-2;
+        }
+        p {
+            font-size: $medida-1 + $medida-05;
+        }
 
-    %prold {
-        font-family: Montserrat;
-    }
+        button {
+            font-size: $medida-1;
+        }
 
+    }
+    %imgpt {
+        img {
+            @include sizes(80%, 8rem);
+        }
+    }
     %grid {
         display: grid;
         margin: 3rem;
@@ -78,25 +88,6 @@
         align-items: center;
         text-align: center;
         justify-content: center;
-    }
-
-    %prod {
-        margin: $medida-1 + $medida-025;
-
-        p {
-            font-size: $medida-1 + $medida-05;
-        }
-
-        button {
-            font-size: $medida-1 + $medida-05;
-        }
-
-    }
-
-    %imgp {
-        img {
-            @include sizes(80%, 15rem);
-        }
     }
 }
 
@@ -126,6 +117,26 @@
     }
     %noned {
         display: none;
+    }
+
+    %imgp {
+        img {
+            @include sizes(80%, 15rem);
+        }
+    }
+    %prod {
+        margin: $medida-1 + $medida-025;
+
+        p {
+            font-size: $medida-1 + $medida-05;
+        }
+
+        button {
+            font-size: $medida-1 + $medida-05;
+        }
+        h2{
+            font-size: $medida-3 - $medida-05;
+        }
     }
 }
 
