--- a/sass/utillities/_extend.scss
+++ b/sass/utillities/_extend.scss
@@ -29,7 +29,7 @@
     h2 {
         @include tb($medida-05, $medida-05);
         @extend %prol;
-        font-size: $medida-3 - $medida-05;
+        font-size: $medida-2;
     }
 
     p {
